--- a/src/AngularSignalR/package.json
+++ b/src/AngularSignalR/package.json
@@ -12,34 +12,34 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~11.2.3",
-    "@angular/common": "~11.2.3",
-    "@angular/compiler": "~11.2.3",
-    "@angular/core": "~11.2.3",
-    "@angular/forms": "~11.2.3",
-    "@angular/platform-browser": "~11.2.3",
-    "@angular/platform-browser-dynamic": "~11.2.3",
-    "@angular/router": "~11.2.3",
-    "angular-auth-oidc-client": "^11.4.3",
-    "bootstrap": "^4.6.0",
-    "jquery": "^3.5.1",
-    "popper.js": "^1.16.1",
-    "rxjs": "~6.6.6",
-    "tslib": "^2.0.0",
-    "zone.js": "~0.11.3",
+    "@angular/animations": "~11.2.5",
+    "@angular/common": "~11.2.5",
+    "@angular/compiler": "~11.2.5",
+    "@angular/core": "~11.2.5",
+    "@angular/forms": "~11.2.5",
+    "@angular/platform-browser": "~11.2.5",
+    "@angular/platform-browser-dynamic": "~11.2.5",
+    "@angular/router": "~11.2.5",
     "@microsoft/signalr": "5.0.2",
     "@ngrx/effects": "11.0.1",
     "@ngrx/entity": "11.0.1",
     "@ngrx/router-store": "11.0.1",
     "@ngrx/store": "11.0.1",
     "@ngrx/store-devtools": "11.0.1",
-    "msgpack5": "5.0.0"
+    "angular-auth-oidc-client": "^11.4.3",
+    "bootstrap": "^4.6.0",
+    "jquery": "^3.5.1",
+    "msgpack5": "5.0.0",
+    "popper.js": "^1.16.1",
+    "rxjs": "~6.6.6",
+    "tslib": "^2.0.0",
+    "zone.js": "~0.11.3"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^0.1102.2",
-    "@angular/cli": "~11.2.2",
-    "@angular/compiler-cli": "~11.2.3",
-    "@angular/language-service": "~11.2.3",
+    "@angular-devkit/build-angular": "^0.1102.4",
+    "@angular/cli": "~11.2.4",
+    "@angular/compiler-cli": "~11.2.5",
+    "@angular/language-service": "~11.2.5",
     "@types/jasmine": "~3.6.0",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "^12.11.1",
